--- a/CookieMonsterMod/index.html
+++ b/CookieMonsterMod/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>This site contains a CookieMonster Mod.</h1>
+<p>Updated 15:39.</p>
 </body>
 </html>
