--- a/CookieMonsterMod/index.html
+++ b/CookieMonsterMod/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This site contains a CookieMonster Mod.</h1>
+<h1>This site contains a CookieMonster Mod, yep.</h1>
 <p>v0.3</p>
 </body>
 </html>
